--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafik Shah - Resume</title>
+    <title>Nisharani Panda - Resume</title>
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -176,14 +176,14 @@
 
 <body>
     <header>
-        <h1>Rafik Shah</h1>
+        <h1>Nisha Panda</h1>
         <p>AI, Data Science, and Machine Learning Enthusiast committed to driving innovation and delivering impactful solutions.</p>
         <div class="contact-info">
             <ul>
-                <li><i class="fas fa-phone-alt"></i>7028352298</li>
-                <li><i class="fas fa-envelope"></i> <a href="mailto:rafikshah3262@gmail.com">rafikshah3262@gmail.com</a></li>
-                <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/rafik-shah-179875209/" target="_blank">LinkedIn</a></li>
-                <li><i class="fab fa-github"></i> <a href="https://github.com/RAFIKSHA" target="_blank">GitHub</a></li>
+                <li><i class="fas fa-phone-alt"></i>6586598574</li>
+                <li><i class="fas fa-envelope"></i> <a href="mailto:niisshap20@gmail.com">rafikshah3262@gmail.com</a></li>
+                <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/nisha-panda/" target="_blank">LinkedIn</a></li>
+                <li><i class="fab fa-github"></i> <a href="https://github.com/niisshha20" target="_blank">GitHub</a></li>
             </ul>
         </div>
     </header>
@@ -224,25 +224,25 @@
 
             <section id="education">
                 <h2>Education</h2>
-                <div class="education-item">
+<!--                 <div class="education-item">
                     <h3>M-Tech Information Technology</h3>
                     <p><strong>Savitribai Phule Pune University (2024-pursuing)</strong></p>
                     <p><strong>Siddhant College of Engineering, Pune</strong></p>
-                </div>
+                </div> -->
 
                 <div class="education-item">
-                    <h3>B-Tech Computer Science and Engineering</h3>
-                    <p><strong>Dr. Babasaheb Ambedkar Technological University (2021-2024)</strong></p>
-                    <p><strong>CSMSS Chh. Shahu College of Engineering, Aurangabad</strong></p>
-                    <p>CGPA: 8.5</p>
+                    <h3>B-Tech Computer Engineering</h3>
+                    <p><strong>St John College of Engineering and Management (2022-2025)</strong></p>
+                    <p><strong>Palghar , Maharashtra </strong></p>
+<!--                     <p>CGPA: 8.5</p> -->
                 </div>
 
                 <div class="education-item">
                     <h3>SSC</h3>
-                    <p><strong>Swami Vivekanand Vidyalaya, Bhokardan</strong></p>
-                    <p><strong>State board of maharashtra (2017-2018)</strong></p>
-                    <p>Percentage Score:93.40%</p>
-                    <p>Completion Year: 2018</p>
+                    <p><strong>C.T.E.S English Medium School</strong></p>
+                    <p><strong>State board of maharashtra (2008-2020)</strong></p>
+                    <p>Percentage Score:89.90%</p>
+                    <p>Completion Year: 2020</p>
                 </div>
             </section>
         </div>
@@ -250,6 +250,11 @@
         <div class="right-column">
             <section id="projects">
                 <h2>Projects</h2>
+                <div class="project-item">
+                    <h3><strong>Mastermind Game</strong></h3>
+                    <p>The Mastermind Game is an engaging and interactive challenge where players have a limited number of attempts to guess a secret word based on a hints. This game promotes critical thinking, vocabulary skills, and deductive reasoning in a fun and entertaining way.</p>
+                <!--<p><a href="https://satyajeet1718.github.io/Portfolio/movie_recommendation.html" target="_blank">Link</a></p>-->
+                </div>
                 <div class="project-item">
                     <h3><strong>Movie Recommendation System</strong></h3>
                     <p>Created a movie recommendation system in Python utilizing content-based filtering with TF-IDF to enhance recommendation accuracy based on movie features.</p>
@@ -269,28 +274,28 @@
             <section id="certifications">
                 <h2>Certified Courses</h2>
                 <ul>
-                    <li>Python (Beginner, Intermediate, Core)</li>
+<!--                     <li>Python (Beginner, Intermediate, Core)</li>
                     <li>AI with Python</li>
                     <li>TensorFlow Python</li>
                     <li>Statistics for Data Science</li>
                     <li>Data Visualization using Python</li>
                     <li>Product Management</li>
-                    <li>Leadership and Management</li>
+                    <li>Leadership and Management</li> -->
                 </ul>
             </section>
 
             <section id="skills">
                 <h2>Skills and Abilities</h2>
                 <ul>
-                    <li>Python Programming: Core java,Java-Script</li>
-                    <li>Data Structures and Algorithms (DSA)</li>
-                    <li>Database: MySQL,MongoDB</li>
-                    <li>Data Science and Data analytics : numpy,pandas,Matplotlib,seaborn,Scikit-learn,Excel,Powerbi</li>
-                    <li>Front end : Html,Css,React</li>
+                    <li>Front end : Html,Css,React,Java-Script</li>
                     <li>Back end :Django</li>
-                    <li>Version Control:Git</li>
-                    <li>Server and Deployment: Docker,AWS</li>
-                    <li>Leadershi,Communication,Team Collaboration,Adaptability</li>
+                    <li>Python Programming</li>
+<!--                     <li>Data Structures and Algorithms (DSA)</li> -->
+                    <li>Database: MySQL,MongoDB</li>
+<!--                     <li>Data Science and Data analytics : numpy,pandas,Matplotlib,seaborn,Scikit-learn,Excel,Powerbi</li> -->
+<!--                     <li>Version Control:Git</li>
+                    <li>Server and Deployment: Docker,AWS</li> -->
+                    <li>Leadership,Communication,Team Collaboration,Adaptability</li>
     
                 </ul>
             </section>
@@ -298,14 +303,14 @@
             <section id="languages">
                 <h2>Languages</h2>
                 <ul>
-                    <li>Proficient in English, Hindi, Marathi</li>
+                    <li>Proficient in English, Hindi, Odia,Marathi</li>
                 </ul>
             </section>
         </div>
     </div>
 
     <footer>
-        <p>©2024 Rafik Shah. All rights reserved.</p>
+        <p>©2024 Nisha Panda. All rights reserved.</p>
     </footer>
 
 </body>
