--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="contact-info">
             <ul>
                 <li><i class="fas fa-phone-alt"></i>6586598574</li>
-                <li><i class="fas fa-envelope"></i> <a href="mailto:niisshap20@gmail.com">rafikshah3262@gmail.com</a></li>
+                <li><i class="fas fa-envelope"></i> <a href="mailto:niisshap20@gmail.com">niisshap20@gmail.com</a></li>
                 <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/nisha-panda/" target="_blank">LinkedIn</a></li>
                 <li><i class="fab fa-github"></i> <a href="https://github.com/niisshha20" target="_blank">GitHub</a></li>
             </ul>
@@ -274,13 +274,13 @@
             <section id="certifications">
                 <h2>Certified Courses</h2>
                 <ul>
-<!--                     <li>Python (Beginner, Intermediate, Core)</li>
+                    <li></li>
                     <li>AI with Python</li>
                     <li>TensorFlow Python</li>
                     <li>Statistics for Data Science</li>
                     <li>Data Visualization using Python</li>
                     <li>Product Management</li>
-                    <li>Leadership and Management</li> -->
+                    <li>Leadership and Management</li>
                 </ul>
             </section>
 
@@ -303,7 +303,7 @@
             <section id="languages">
                 <h2>Languages</h2>
                 <ul>
-                    <li>Proficient in English, Hindi, Odia,Marathi</li>
+                    <li>Proficient in English, Hindi, Odia, Marathi</li>
                 </ul>
             </section>
         </div>
